--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "Emma-Mobil GbR",
   "private": true,
   "dependencies": {
-    "express": "=2.x",
+    "express": "~2.5.2",
     "underscore": ">= 1.1.6",
     "socket.io": ">= 0.7.0"
   },
-  "engines": { "node": ">= 0.4.7" }
+  "engines": { "node": ">= 0.6.5" }
 }
